--- a/render.yaml
+++ b/render.yaml
@@ -7,8 +7,14 @@ services:
     envVars:
       - key: REACT_APP_API_URL
         sync: false # Установите URL вашего API на Render
+    headers:
+      - path: /*
+        name: Cache-Control
+        value: no-cache
     autoDeploy: true
     routes:
       - type: rewrite
         source: /*
-        destination: /index.html 
+        destination: /index.html
+    # Директория fallback для всех маршрутов    
+    pullRequestPreviewsEnabled: true 
