--- a/render.yaml
+++ b/render.yaml
@@ -15,8 +15,12 @@ services:
         value: no-cache
     autoDeploy: true
     routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
+      - type: spa
+        name: frontend
+        buildCommand: npm run build
+        staticPublishPath: ./build/
+        routes:
+          - source: /*
+            destination: /index.html
     # Директория fallback для всех маршрутов    
     pullRequestPreviewsEnabled: true 
