--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
   - type: web
     name: games-catalog-frontend
     env: static
-    buildCommand: npm install && npm run build
+    buildCommand: chmod +x ./render-build.sh && ./render-build.sh
     staticPublishPath: ./build
     envVars:
       - key: REACT_APP_API_URL
